syntax = "proto3";
package basictracer_go.wire;
option go_package = "wire";

message TracerState {
  sfixed64 trace_id = 1;
  sfixed64 span_id = 2;
  bool    sampled = 3;
}

message Baggage {
  map<string, string> items = 1;
}
